Add dateTime feature for readings

--- a/app/views/tags/listreadings.html
+++ b/app/views/tags/listreadings.html
@@ -1,6 +1,7 @@
 <table class="ui celled table">
   <thead>
     <tr>
+      <th>Date/Time</th>
       <th>Code</th>
       <th>Temp</th>
       <th>Wind Speed</th>
@@ -12,6 +13,9 @@
   <tbody>
   #{list items:_station.readings, as:'reading'}
   <tr>
+    <td>
+      ${reading.date}
+    </td>
     <td>
       ${reading.code}
     </td>
