Fix bug where null pointer error was not deleting station

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -143,7 +143,7 @@
         <i class="icon folder open"></i>
       </a>
       <!--  delete station  -->
-      <a href="/dashboard/${member.id}/deleteStation/${station.id}" class="ui icon button">
+      <a href="/dashboard/deleteStation/${station.id}" class="ui icon button">
         <i class="icon trash"></i>
       </a>
     </div>
