--- a/app/views/tags/menu.html
+++ b/app/views/tags/menu.html
@@ -7,6 +7,7 @@
   </div>
   <div class="right menu">
     <a id="dashboard" class="item" href="/dashboard"> Dashboard  </a>
+    <a id="account" class="item" href="/account"> Account  </a>
     <a id="about" class="item" href="/about"> About </a>
     <a id="logout" class="item" href="/logout"> Logout </a>
   </div>
