Add responsiveness for tsegments and changes to ui design

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -17,7 +17,7 @@
       </h2>
 
       <!--  Trends and Latest Data  -->
-      <div class="ui five column grid">
+      <div class="ui stackable five column grid">
 
         <div id="station" class="column">
           <div class="ui fluid inverted card">
