--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -2,7 +2,7 @@
 #{set title:'Signup' /}
 #{welcomemenu id:"signup"/}
 
-<div class="ui two column grid basic middle aligned segment">
+<div class="ui two column stackable grid basic middle aligned segment">
     <!--  Image  -->
     <div class="column">
         <img class="ui image" src="/public/images/registration-img.png">
@@ -10,7 +10,7 @@
 
     <!--  Form  -->
     <div class="column">
-        <form class="ui segment form" action="/register" method="POST">
+        <form class="ui segment raised form" action="/register" method="POST">
             <h3 class="ui header">Register</h3>
             <div class="two fields">
                 <div class="field">
