--- a/app/views/station.html
+++ b/app/views/station.html
@@ -3,14 +3,14 @@
 
 #{menu id:"dashboard"/}
 
-<section class="ui segment">
-    <h2 class="ui header">
+<section>
+    <h2 class="ui header top-medium-padding">
         ${station.stationName}
     </h2>
     <table>
         <tbody>
         <!--  Trends and Latest Data  -->
-        <div class="ui five column grid">
+        <div class="ui five column stackable grid">
 
             <div id="station" class="column">
                 <div class="ui fluid inverted card">
