--- a/app/views/tags/addreading.html
+++ b/app/views/tags/addreading.html
@@ -1,4 +1,4 @@
-<form class="ui segment form" action="/stations/${_station.id}/addReading" method="POST">
+<form class="ui raised segment form" action="/stations/${_station.id}/addReading" method="POST">
   <div class="three fields">
     <div class="field">
       <label>Code</label>
