--- a/app/views/tags/editaccount.html
+++ b/app/views/tags/editaccount.html
@@ -1,5 +1,5 @@
 <div class="column">
-    <form class="ui segment form" action="/edit" method="POST">
+    <form class="ui segment raised form" action="/edit" method="POST">
         <h3 class="ui header">Edit your details:</h3>
         <div class="two fields">
             <div class="field">
