--- a/app/views/accounts.html
+++ b/app/views/accounts.html
@@ -7,5 +7,27 @@
     <h2>Welcome ${member.firstname} ${member.lastname}</h2>
 </header>
 
-<!--  Edit account form  -->
-#{editaccount/}
+<div class="ui equal width stackable grid">
+
+    <div class="column">
+        <div class="ui link cards">
+            <div class="card">
+                <div class="image">
+                    <img src="../../public/images/profile.png">
+                </div>
+                <div class="content">
+                    <div class="header">${member.firstname} ${member.lastname}</div>
+                    <div class="meta">
+                        <a>User</a>
+                    </div>
+                    <div class="description">
+                        <strong>Email:</strong>  ${member.email}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--  Edit account form  -->
+    #{editaccount/}
+</div>
