--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -5,7 +5,7 @@
 
   <!--  User first name & last name  -->
   <header class="ui header">
-      ${member.firstname} ${member.lastname}'s Stations
+      <h1>${member.firstname} ${member.lastname}'s Stations</h1>
   </header>
 
   <section>
