--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../../public/css/styles.css">
   </head>
   <body>
-    <section class="ui container bottom-medium-padding">
+    <section class="ui container bottom-small-padding">
       #{doLayout /}
     </section>
   </body>
