--- a/app/views/start.html
+++ b/app/views/start.html
@@ -3,17 +3,30 @@
 
 #{welcomemenu id:"start"/}
 
-<section class="ui center aligned middle aligned segment">
-  <h1 class="ui header">
-    Weather Top
-  </h1>
-  <p>
-    Weather top is a Web Application that organizations can use to record Weather patterns and events.
-  </p>
-  <p>
-    Please select the Dashboard to find out more.
-  </p>
-  <p>
-    Select about to know more about Weather Top.
-  </p>
+<section class="ui center aligned middle aligned">
+  <div class="ui two column stackable grid basic middle aligned segment">
+
+    <!--  Start Content  -->
+    <div class="column">
+      <h1 class="ui header">
+        WeatherTop
+      </h1>
+      <p>
+        WeatherTop is a Web Application which organizations and individuals can use to record Weather patterns and events.
+      </p>
+      <p>
+        Please Log in to begin adding your weather stations and save your reports.
+      </p>
+      <p>
+        Otherwise, register for an account to begin adding your station(s) to our database
+        and add reports.
+      </p>
+    </div>
+
+    <!--  Image  -->
+    <div class="column">
+      <img class="ui image" src="/public/images/start-img.jpeg">
+    </div>
+
+  </div>
 </section>
