--- a/app/views/tags/addstation.html
+++ b/app/views/tags/addstation.html
@@ -1,4 +1,4 @@
-<form class="ui segment form" action="/dashboard/addStation" method="POST">
+<form class="ui segment raised form" action="/dashboard/addStation" method="POST">
     <div class="three fields">
         <div class="field">
             <label>Name</label>
