--- a/app/views/login.html
+++ b/app/views/login.html
@@ -11,7 +11,7 @@
                 <label>Email</label> <input placeholder="Email" name="email">
             </div>
             <div class="field">
-                <label>Password</label> <input type="password" name="password">
+                <label>Password</label> <input type="password" placeholder="Password" name="password">
             </div>
             <button class="ui blue submit button">Login</button>
         </form>
