Add sorting user's station according in alphabetical order

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -10,7 +10,7 @@
 
   <section>
     <!--  List of stations  -->
-    #{list items:stations, as:'station'}
+    #{list items:sortedStationList, as:'station'}
     <div class="ui stacked segment">
       <h2 class="ui header">
         ${station.stationName}
