Fix invalid input possibility by limiting add readings to nearest hundred

--- a/app/views/tags/addreading.html
+++ b/app/views/tags/addreading.html
@@ -2,7 +2,7 @@
   <div class="three fields">
     <div class="field">
       <label>Code</label>
-      <input placeholder="00" type="text" name="code">
+      <input placeholder="00" type="number" step="100" min="100" max="800" name="code">
     </div>
     <div class="field">
       <label>Temperature</label>
