Add changes to readme, add stackable menu

--- a/app/views/tags/menu.html
+++ b/app/views/tags/menu.html
@@ -1,4 +1,4 @@
-<nav class="ui menu">
+<nav class="ui stackable menu">
   <header class="ui header item">
     <a href="/dashboard"> WeatherTop </a>
   </header>
